# bike_alerts

./: .gitignore  README.md  get_refresh_token.ipynb  initial_backfill.py  main.py  pipeline.py  pyproject.toml  requirements.txt  testing.ipynb
.github/workflows/: daily_run.yml
functions/: alert_logic.py  email.py  gsheets.py  pushover.py  strava_api.py  thresholds.py
